Fix text align for Boost title

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -309,6 +309,7 @@ end of nav && hero section
     color: $c-white;
     font-size: 1.8rem;
     margin-bottom: $m-base;
+	text-align: center;
   }
 
   @include tablet-query {
